run package msbuyild

--- a/vignettes/biocad_registry/models.html
+++ b/vignettes/biocad_registry/models.html
@@ -76,342 +76,17 @@ table caption {font-size:14px;font-weight:bolder;}
       <table class="table-three-line" style="display: block">
         <caption>.NET clr type export</caption>
         <tbody><tr>
-  <td id="reaction_node">
-    <a href="/vignettes/clr/biocad_storage/biocad_registryModel/reaction.html">reaction_node: reaction</a>
-  </td>
-  <td><p>```SQL
- 
- --
- 
- DROP TABLE IF EXISTS `reaction`;
- /<em>!40101 SET @saved_cs_client     = @@character_set_client </em>/;
- /<em>!50503 SET character_set_client = utf8mb4 </em>/;
- CREATE TABLE `reaction` (
-   `id` int unsigned NOT NULL AUTO_INCREMENT,
-   `db<em>xref` varchar(64) COLLATE utf8mb3</em>bin NOT NULL COMMENT 'the reference id of this reaction model from the external source database',
-   `source_dbkey` int unsigned NOT NULL COMMENT 'the source database name reference vocabulary term index',
-   `hashcode` varchar(64) COLLATE utf8mb3_bin DEFAULT NULL COMMENT 'the unique indexed hash code for the reaction, rule for evaluate this hashcode:  mapping metabolite to biocad registry internal id, build mapped equation string, then cal md5 hashcode of the left and right and combine the hashcode string into one',
-   `name` varchar(1024) CHARACTER SET utf8mb3 COLLATE utf8mb3_bin NOT NULL COMMENT 'name of current reaction model',
-   `equation` mediumtext CHARACTER SET utf8mb3 COLLATE utf8mb3_bin NOT NULL COMMENT 'reaction equation of current reaction model',
-   `add<em>time` datetime NOT NULL DEFAULT CURRENT</em>TIMESTAMP,
-   `note` longtext CHARACTER SET utf8mb3 COLLATE utf8mb3_bin,
-   PRIMARY KEY (`id`),
-   UNIQUE KEY `id_UNIQUE` (`id`),
-   UNIQUE KEY `db<em>xref</em>UNIQUE` (`db_xref`),
-   KEY `source<em>database</em>idx` (`source_dbkey`),
-   KEY `hashindex` (`hashcode`),
-   FULLTEXT KEY `search_text` (`name`,`note`),
-   FULLTEXT KEY `search<em>all</em>text` (`name`,`equation`,`note`)
- ) ENGINE=InnoDB AUTO<em>INCREMENT=133887 DEFAULT CHARSET=utf8mb3 COLLATE=utf8mb3</em>bin COMMENT='the definition of the biological reaction process';
- /<em>!40101 SET character_set_client = @saved_cs_client </em>/;
- 
- --
- ```</p></td>
-</tr>
-<tr>
-  <td id="reaction_graph">
-    <a href="/vignettes/clr/biocad_storage/biocad_registryModel/reaction_graph.html">reaction_graph: reaction_graph</a>
-  </td>
-  <td><p>```SQL
- 
- --
- 
- DROP TABLE IF EXISTS `reaction_graph`;
- /<em>!40101 SET @saved_cs_client     = @@character_set_client </em>/;
- /<em>!50503 SET character_set_client = utf8mb4 </em>/;
- CREATE TABLE `reaction_graph` (
-   `id` int unsigned NOT NULL AUTO_INCREMENT,
-   `reaction` int unsigned NOT NULL COMMENT 'the id of the reaction',
-   `molecule_id` int unsigned NOT NULL COMMENT 'the id of the molecule entity',
-   `db<em>xref` varchar(255) CHARACTER SET utf8mb3 COLLATE utf8mb3</em>bin NOT NULL COMMENT 'the reaction source definition of the molecule to reference the molecule entity inside biocad registry, used for link the molecule entity with current relationship record ',
-   `role` int unsigned NOT NULL COMMENT 'the vocabulary term of the molecule role inside this reaction model, usually be the substrate or product',
-   `factor` double NOT NULL DEFAULT '1',
-   `add<em>time` datetime NOT NULL DEFAULT CURRENT</em>TIMESTAMP,
-   `note` longtext CHARACTER SET utf8mb3 COLLATE utf8mb3_bin,
-   PRIMARY KEY (`id`),
-   UNIQUE KEY `id_UNIQUE` (`id`) /<em>!80000 INVISIBLE </em>/,
-   KEY `reaction<em>info</em>idx` (`reaction`),
-   KEY `molecule<em>data</em>idx` (`molecule_id`),
-   KEY `role<em>term</em>idx` (`role`),
-   KEY `check<em>duplicated` (`reaction`,`db</em>xref`,`role`)
- ) ENGINE=InnoDB AUTO<em>INCREMENT=466048 DEFAULT CHARSET=utf8mb3 COLLATE=utf8mb3</em>bin COMMENT='the relationship between the reaction model and molecule objects';
- /<em>!40101 SET character_set_client = @saved_cs_client </em>/;
- 
- --
- ```</p></td>
-</tr>
-<tr>
-  <td id="molecules">
-    <a href="/vignettes/clr/biocad_storage/biocad_registryModel/molecule.html">molecules: molecule</a>
-  </td>
-  <td><p>```SQL
- 
- --
- 
- DROP TABLE IF EXISTS `molecule`;
- /<em>!40101 SET @saved_cs_client     = @@character_set_client </em>/;
- /<em>!50503 SET character_set_client = utf8mb4 </em>/;
- CREATE TABLE `molecule` (
-   `id` int unsigned NOT NULL AUTO_INCREMENT,
-   `xref<em>id` varchar(255) CHARACTER SET utf8mb4 COLLATE utf8mb4</em>unicode<em>ci NOT NULL COMMENT 'the source external reference id of current molecule, for a gene should be a locus</em>tag, and protein should be a main uniprot accession id and for metabolite should be pubchem cid or chebi id(255 chars for long metacyc id)',
-   `name` varchar(512) CHARACTER SET utf8mb4 COLLATE utf8mb4<em>unicode</em>ci NOT NULL COMMENT 'the name of the molecule',
-   `mass` double NOT NULL COMMENT 'the molecular exact mass',
-   `type` int unsigned NOT NULL COMMENT 'the molecule type, the id of the vocabulary term, value could be nucl(DNA), RNA, prot, metabolite, complex, dna<em>motif</em>sequence, protein<em>motif</em>sequence',
-   `formula` varchar(128) CHARACTER SET utf8mb4 COLLATE utf8mb4<em>unicode</em>ci NOT NULL COMMENT 'metabolite formula or nucl/prot sequence',
-   `parent` int unsigned NOT NULL COMMENT 'the parent metabolite id, example as RNA is a parent of polypeptide, and gene is a parent of RNA sequence.',
-   `tax_id` int unsigned DEFAULT NULL COMMENT 'the ncbi taxonomy id of current molecule that belongs to, apply for the protein/gene. this relationship data is extract from the genbank/uniprot annotation source directly',
-   `add<em>time` datetime NOT NULL DEFAULT CURRENT</em>TIMESTAMP COMMENT 'add time of current molecular entity',
-   `note` longtext CHARACTER SET utf8mb4 COLLATE utf8mb4<em>unicode</em>ci COMMENT 'description text about current entity object',
-   PRIMARY KEY (`id`),
-   UNIQUE KEY `id_UNIQUE` (`id`),
-   UNIQUE KEY `unique<em>reference` (`xref</em>id`),
-   KEY `data<em>type</em>idx` (`type`),
-   KEY `parent<em>molecule</em>idx` (`parent`),
-   KEY `name_index` (`name`),
-   KEY `xref<em>index` (`xref</em>id`),
-   KEY `mass_filter` (`mass`),
-   KEY `find<em>index` (`xref</em>id`,`type`),
-   KEY `taxonomy<em>info</em>idx` (`tax_id`),
-   FULLTEXT KEY `search_text` (`name`,`note`)
- ) ENGINE=InnoDB AUTO<em>INCREMENT=77291817 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4</em>general_ci COMMENT='The molecular entity object inside a cell';
- /<em>!40101 SET character_set_client = @saved_cs_client </em>/;
- 
- --
- ```</p></td>
-</tr>
-<tr>
-  <td id="dblinks">
-    <a href="/vignettes/clr/biocad_storage/biocad_registryModel/db_xrefs.html">dblinks: db_xrefs</a>
-  </td>
-  <td><p>```SQL
- 
- --
- 
- DROP TABLE IF EXISTS `db_xrefs`;
- /<em>!40101 SET @saved_cs_client     = @@character_set_client </em>/;
- /<em>!50503 SET character_set_client = utf8mb4 </em>/;
- CREATE TABLE `db_xrefs` (
-   `id` int unsigned NOT NULL AUTO_INCREMENT,
-   `obj_id` int unsigned NOT NULL,
-   `db_key` int unsigned NOT NULL,
-   `xref` varchar(255) CHARACTER SET utf8mb3 COLLATE utf8mb3_bin NOT NULL,
-   `type` int unsigned NOT NULL COMMENT 'the target type of obj_id that point to, could be molecules, reactions, pathways',
-   `add<em>time` datetime NOT NULL DEFAULT CURRENT</em>TIMESTAMP,
-   PRIMARY KEY (`id`),
-   UNIQUE KEY `id_UNIQUE` (`id`),
-   UNIQUE KEY `unique<em>dblink` (`obj</em>id`,`db_key`,`xref`,`type`),
-   KEY `molecule<em>id</em>idx` (`obj_id`),
-   KEY `db<em>name</em>idx` (`db_key`),
-   KEY `object<em>type</em>idx` (`type`),
-   KEY `find_xrefs` (`type`,`xref`),
-   KEY `dbid_index` (`xref`),
-   KEY `search<em>dbxrefs` (`obj</em>id`,`db_key`,`xref`,`type`)
- ) ENGINE=InnoDB AUTO<em>INCREMENT=24998147 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4</em>general_ci;
- /<em>!40101 SET character_set_client = @saved_cs_client </em>/;
- 
- --
- ```</p></td>
-</tr>
-<tr>
-  <td id="subcellular_compartments">
-    <a href="/vignettes/clr/biocad_storage/biocad_registryModel/subcellular_compartments.html">subcellular_compartments: subcellular_compartments</a>
-  </td>
-  <td><p>```SQL
- 
- --
- 
- DROP TABLE IF EXISTS `subcellular_compartments`;
- /<em>!40101 SET @saved_cs_client     = @@character_set_client </em>/;
- /<em>!50503 SET character_set_client = utf8mb4 </em>/;
- CREATE TABLE `subcellular_compartments` (
-   `id` int unsigned NOT NULL AUTO_INCREMENT,
-   `compartment<em>name` varchar(1024) CHARACTER SET utf8mb3 COLLATE utf8mb3</em>bin NOT NULL,
-   `topology` varchar(1024) CHARACTER SET utf8mb3 COLLATE utf8mb3_bin DEFAULT NULL,
-   `add<em>time` datetime NOT NULL DEFAULT CURRENT</em>TIMESTAMP,
-   `note` longtext CHARACTER SET utf8mb3 COLLATE utf8mb3_bin,
-   PRIMARY KEY (`id`),
-   UNIQUE KEY `id_UNIQUE` (`id`),
-   UNIQUE KEY `compartment<em>name</em>UNIQUE` (`compartment_name`),
-   KEY `name<em>index` (`compartment</em>name`)
- ) ENGINE=InnoDB AUTO<em>INCREMENT=305 DEFAULT CHARSET=utf8mb3 COLLATE=utf8mb3</em>bin COMMENT='defines the subcellular compartments';
- /<em>!40101 SET character_set_client = @saved_cs_client </em>/;
- 
- --
- ```</p></td>
-</tr>
-<tr>
-  <td id="subcellular_locations">
-    <a href="/vignettes/clr/biocad_storage/biocad_registryModel/subcellular_location.html">subcellular_locations: subcellular_location</a>
-  </td>
-  <td><p>```SQL
- 
- --
- 
- DROP TABLE IF EXISTS `subcellular_location`;
- /<em>!40101 SET @saved_cs_client     = @@character_set_client </em>/;
- /<em>!50503 SET character_set_client = utf8mb4 </em>/;
- CREATE TABLE `subcellular_location` (
-   `id` int unsigned NOT NULL AUTO_INCREMENT,
-   `compartment_id` int unsigned NOT NULL,
-   `obj_id` int unsigned NOT NULL,
-   `entity` int unsigned NOT NULL COMMENT 'the vocabulary type id of the entity object, could be molecule, reaction or pathways',
-   `add<em>time` datetime NOT NULL DEFAULT CURRENT</em>TIMESTAMP,
-   `note` longtext CHARACTER SET utf8mb3 COLLATE utf8mb3_bin,
-   PRIMARY KEY (`id`),
-   UNIQUE KEY `id_UNIQUE` (`id`),
-   UNIQUE KEY `unique<em>reference` (`compartment</em>id`,`obj_id`,`entity`) /<em>!80000 INVISIBLE </em>/,
-   KEY `subcellular<em>compartments</em>idx` (`compartment_id`),
-   KEY `molecule<em>obj</em>idx` (`obj_id`),
-   KEY `link<em>entity</em>type_idx` (`entity`)
- ) ENGINE=InnoDB AUTO<em>INCREMENT=867305 DEFAULT CHARSET=utf8mb3 COLLATE=utf8mb3</em>bin COMMENT='associates the subcellular_compartments and the molecule objects';
- /<em>!40101 SET character_set_client = @saved_cs_client </em>/;
- 
- --
- ```</p></td>
-</tr>
-<tr>
-  <td id="vocabulary">
-    <a href="/vignettes/clr/biocad_storage/biocad_registryModel/vocabulary.html">vocabulary: vocabulary</a>
-  </td>
-  <td><p>```SQL
- 
- --
- 
- DROP TABLE IF EXISTS `vocabulary`;
- /<em>!40101 SET @saved_cs_client     = @@character_set_client </em>/;
- /<em>!50503 SET character_set_client = utf8mb4 </em>/;
- CREATE TABLE `vocabulary` (
-   `id` int unsigned NOT NULL AUTO_INCREMENT,
-   `category` varchar(32) CHARACTER SET utf8mb3 COLLATE utf8mb3_bin NOT NULL,
-   `term` varchar(255) CHARACTER SET utf8mb3 COLLATE utf8mb3_bin NOT NULL,
-   `color` varchar(8) CHARACTER SET utf8mb3 COLLATE utf8mb3_bin NOT NULL DEFAULT '#000000' COMMENT 'the html color code, example as #ffffff',
-   `add<em>time` datetime NOT NULL DEFAULT CURRENT</em>TIMESTAMP,
-   `note` longtext COLLATE utf8mb4<em>general</em>ci,
-   PRIMARY KEY (`id`),
-   UNIQUE KEY `id_UNIQUE` (`id`),
-   KEY `search_term` (`category`,`term`),
-   KEY `unique_result` (`term`,`color`),
-   FULLTEXT KEY `search_text` (`note`)
- ) ENGINE=InnoDB AUTO<em>INCREMENT=15033 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4</em>general_ci COMMENT='vocabulary term of the entity in registry database';
- /<em>!40101 SET character_set_client = @saved_cs_client </em>/;
- 
- --
- -- Dumping events for database 'cad_registry'
- --
- 
- --
- -- Dumping routines for database 'cad_registry'
- --
- /<em>!40103 SET TIME_ZONE=@OLD_TIME_ZONE </em>/;
- 
- /<em>!40101 SET SQL_MODE=@OLD_SQL_MODE </em>/;
- /<em>!40014 SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS </em>/;
- /<em>!40014 SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS </em>/;
- /<em>!40101 SET CHARACTER_SET_CLIENT=@OLD_CHARACTER_SET_CLIENT </em>/;
- /<em>!40101 SET CHARACTER_SET_RESULTS=@OLD_CHARACTER_SET_RESULTS </em>/;
- /<em>!40101 SET COLLATION_CONNECTION=@OLD_COLLATION_CONNECTION </em>/;
- /<em>!40111 SET SQL_NOTES=@OLD_SQL_NOTES </em>/;
- 
- -- Dump completed on 2025-11-07 21:28:19
- ```</p></td>
-</tr>
-<tr>
-  <td id="pathway">
-    <a href="/vignettes/clr/biocad_storage/biocad_registryModel/pathway.html">pathway: pathway</a>
-  </td>
-  <td><p>```SQL
- 
- --
- 
- DROP TABLE IF EXISTS `pathway`;
- /<em>!40101 SET @saved_cs_client     = @@character_set_client </em>/;
- /<em>!50503 SET character_set_client = utf8mb4 </em>/;
- CREATE TABLE `pathway` (
-   `id` int unsigned NOT NULL AUTO_INCREMENT,
-   `xref<em>id` varchar(45) COLLATE utf8mb3</em>bin DEFAULT NULL COMMENT 'the external reference id of the pathway',
-   `source_dbkey` int unsigned NOT NULL COMMENT 'the vocabulary term reference id to the external database name of this pathway object where is comes from',
-   `name` varchar(1024) CHARACTER SET utf8mb3 COLLATE utf8mb3_bin NOT NULL COMMENT 'the pathway name',
-   `ncbi_taxid` int unsigned NOT NULL,
-   `add<em>time` datetime NOT NULL DEFAULT CURRENT</em>TIMESTAMP,
-   `note` longtext CHARACTER SET utf8mb3 COLLATE utf8mb3_bin,
-   PRIMARY KEY (`id`),
-   UNIQUE KEY `id_UNIQUE` (`id`),
-   UNIQUE KEY `name<em>UNIQUE` (`source</em>dbkey`,`xref_id`),
-   KEY `source<em>name</em>idx` (`source_dbkey`)
- ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb3 COLLATE=utf8mb3_bin;
- /<em>!40101 SET character_set_client = @saved_cs_client </em>/;
- 
- --
- ```</p></td>
-</tr>
-<tr>
-  <td id="complex">
-    <a href="/vignettes/clr/biocad_storage/biocad_registryModel/complex.html">complex: complex</a>
-  </td>
-  <td><p>```SQL
- 
- --
- 
- DROP TABLE IF EXISTS `complex`;
- /<em>!40101 SET @saved_cs_client     = @@character_set_client </em>/;
- /<em>!50503 SET character_set_client = utf8mb4 </em>/;
- CREATE TABLE `complex` (
-   `id` int unsigned NOT NULL AUTO_INCREMENT,
-   `molecule_id` int unsigned NOT NULL COMMENT 'the complex molecule id',
-   `component_id` int unsigned NOT NULL COMMENT 'the component molecule id',
-   `add<em>time` datetime NOT NULL DEFAULT CURRENT</em>TIMESTAMP,
-   `note` longtext CHARACTER SET utf8mb3 COLLATE utf8mb3_bin,
-   PRIMARY KEY (`id`),
-   UNIQUE KEY `id_UNIQUE` (`id`),
-   KEY `molecule<em>info</em>idx` (`molecule_id`),
-   KEY `component<em>info</em>idx` (`component_id`)
- ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb3 COLLATE=utf8mb3_bin COMMENT='the complex component composition graph data';
- /<em>!40101 SET character_set_client = @saved_cs_client </em>/;
- 
- --
- ```</p></td>
-</tr>
-<tr>
-  <td id="biocad_registry">
-    <a href="/vignettes/clr/biocad_storage/biocad_registry.html">biocad_registry: biocad_registry</a>
-  </td>
-  <td><p>a wrapper of the biocad registry database</p></td>
-</tr>
-<tr>
   <td id="cad_registry">
-    <a href="/vignettes/clr/biocad_storage/biocad_registry.html">cad_registry: biocad_registry</a>
+    <a href="/vignettes/clr/registry_data/biocad_registry.html">cad_registry: biocad_registry</a>
   </td>
-  <td><p>a wrapper of the biocad registry database</p></td>
+  <td></td>
 </tr></tbody>
       </table>
       <br />
       <br />
       <table class="table-three-line">
         <caption>.NET clr function exports</caption>
-        <tbody><tr>
-  <td id="vocabulary_id">
-    <a href="./models/vocabulary_id.html">vocabulary_id</a>
-  </td>
-  <td></td>
-</tr>
-<tr>
-  <td id="subcellular_location">
-    <a href="./models/subcellular_location.html">subcellular_location</a>
-  </td>
-  <td></td>
-</tr>
-<tr>
-  <td id="enzyme_function">
-    <a href="./models/enzyme_function.html">enzyme_function</a>
-  </td>
-  <td></td>
-</tr>
-<tr>
-  <td id="enzyme">
-    <a href="./models/enzyme.html">enzyme</a>
-  </td>
-  <td></td>
-</tr></tbody>
+        <tbody></tbody>
       </table>
     </div>
     <hr />
