how to insert hmdb

--- a/vignettes/biocad_registry/registry.html
+++ b/vignettes/biocad_registry/registry.html
@@ -81,42 +81,7 @@ table caption {font-size:14px;font-weight:bolder;}
       <br />
       <table class="table-three-line">
         <caption>.NET clr function exports</caption>
-        <tbody><tr>
-  <td id="as.data.frame.taxonomyinfo">
-    <a href="./registry/as.data.frame.taxonomyinfo.html">as.data.frame.taxonomyinfo</a>
-  </td>
-  <td><a href="/vignettes/clr/biocadRegistry/taxonomyInfo.html">taxonomyInfo</a>: </td>
-</tr>
-<tr>
-  <td id="get_taxinfo">
-    <a href="./registry/get_taxinfo.html">get_taxinfo</a>
-  </td>
-  <td></td>
-</tr>
-<tr>
-  <td id="find_taxinfo">
-    <a href="./registry/find_taxinfo.html">find_taxinfo</a>
-  </td>
-  <td></td>
-</tr>
-<tr>
-  <td id="taxonomy_lineage">
-    <a href="./registry/taxonomy_lineage.html">taxonomy_lineage</a>
-  </td>
-  <td></td>
-</tr>
-<tr>
-  <td id="child_list">
-    <a href="./registry/child_list.html">child_list</a>
-  </td>
-  <td></td>
-</tr>
-<tr>
-  <td id="get_by_xref">
-    <a href="./registry/get_by_xref.html">get_by_xref</a>
-  </td>
-  <td></td>
-</tr></tbody>
+        <tbody></tbody>
       </table>
     </div>
     <hr />
