--- a/vignettes/biocad_registry/setup.html
+++ b/vignettes/biocad_registry/setup.html
@@ -82,8 +82,14 @@ table caption {font-size:14px;font-weight:bolder;}
       <table class="table-three-line">
         <caption>.NET clr function exports</caption>
         <tbody><tr>
-  <td id="setup_metabolites">
-    <a href="./setup/setup_metabolites.html">setup_metabolites</a>
+  <td id="setup_kegg">
+    <a href="./setup/setup_kegg.html">setup_kegg</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
+  <td id="setup_refmet">
+    <a href="./setup/setup_refmet.html">setup_refmet</a>
   </td>
   <td></td>
 </tr></tbody>
