--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -68,6 +68,7 @@ RoxygenNote: 7.1.1
 <h2>Library: biocad_registry.dll</h2>
 <ul>
 <li><a href="./biocad_registry/models.html">models</a></li>
+<li><a href="./biocad_registry/registry.html">registry</a></li>
 <li><a href="./biocad_registry/setup.html">setup</a></li>
 </ul>
 </body>
