--- a/vignettes/biocad_registry/setup.html
+++ b/vignettes/biocad_registry/setup.html
@@ -92,6 +92,18 @@ table caption {font-size:14px;font-weight:bolder;}
     <a href="./setup/setup_refmet.html">setup_refmet</a>
   </td>
   <td></td>
+</tr>
+<tr>
+  <td id="setup_hmdb">
+    <a href="./setup/setup_hmdb.html">setup_hmdb</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
+  <td id="setup_lipidmaps">
+    <a href="./setup/setup_lipidmaps.html">setup_lipidmaps</a>
+  </td>
+  <td></td>
 </tr></tbody>
       </table>
     </div>
