--- a/vignettes/biocad_registry/setup.html
+++ b/vignettes/biocad_registry/setup.html
@@ -104,6 +104,12 @@ table caption {font-size:14px;font-weight:bolder;}
     <a href="./setup/setup_lipidmaps.html">setup_lipidmaps</a>
   </td>
   <td></td>
+</tr>
+<tr>
+  <td id="save_motif">
+    <a href="./setup/save_motif.html">save_motif</a>
+  </td>
+  <td></td>
 </tr></tbody>
       </table>
     </div>
