--- a/vignettes/biocad_registry/setup.html
+++ b/vignettes/biocad_registry/setup.html
@@ -106,6 +106,12 @@ table caption {font-size:14px;font-weight:bolder;}
   <td></td>
 </tr>
 <tr>
+  <td id="setup_chebi">
+    <a href="./setup/setup_chebi.html">setup_chebi</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
   <td id="save_motif">
     <a href="./setup/save_motif.html">save_motif</a>
   </td>
