--- a/vignettes/biocad_registry/registry.html
+++ b/vignettes/biocad_registry/registry.html
@@ -81,7 +81,12 @@ table caption {font-size:14px;font-weight:bolder;}
       <br />
       <table class="table-three-line">
         <caption>.NET clr function exports</caption>
-        <tbody></tbody>
+        <tbody><tr>
+  <td id="save_genbank">
+    <a href="./registry/save_genbank.html">save_genbank</a>
+  </td>
+  <td></td>
+</tr></tbody>
       </table>
     </div>
     <hr />
