--- a/vignettes/biocad_registry/setup/setup_chebi.html
+++ b/vignettes/biocad_registry/setup/setup_chebi.html
@@ -27,7 +27,8 @@
         <h3>Usage</h3>
 
         <div style="width: 100%; padding-left: 3%; color: black;">
-            <pre><code class='language-R' style="color: black; font-weight:normal;"><strong>setup_chebi</strong>(<i>registry</i>, <i>chebi</i>);</code></pre>
+            <pre><code class='language-R' style="color: black; font-weight:normal;"><strong>setup_chebi</strong>(<i>registry</i>, <i>chebi</i>,
+    <i>init.ontology</i> = <span style='color: blue !important;'>TRUE</span>);</code></pre>
         </div>
 
         <h3>Arguments</h3>
