make improvements of save ko

--- a/vignettes/biocad_registry/registry.html
+++ b/vignettes/biocad_registry/registry.html
@@ -86,6 +86,12 @@ table caption {font-size:14px;font-weight:bolder;}
     <a href="./registry/save_genbank.html">save_genbank</a>
   </td>
   <td></td>
+</tr>
+<tr>
+  <td id="make_genbank_dbxrefs">
+    <a href="./registry/make_genbank_dbxrefs.html">make_genbank_dbxrefs</a>
+  </td>
+  <td></td>
 </tr></tbody>
       </table>
     </div>
