--- a/vignettes/biocad_registry/setup.html
+++ b/vignettes/biocad_registry/setup.html
@@ -116,6 +116,12 @@ table caption {font-size:14px;font-weight:bolder;}
     <a href="./setup/save_motif.html">save_motif</a>
   </td>
   <td></td>
+</tr>
+<tr>
+  <td id="setup_ko">
+    <a href="./setup/setup_ko.html">setup_ko</a>
+  </td>
+  <td></td>
 </tr></tbody>
       </table>
     </div>
