run package msbild

--- a/vignettes/biocad_registry/exports.html
+++ b/vignettes/biocad_registry/exports.html
@@ -86,6 +86,12 @@ table caption {font-size:14px;font-weight:bolder;}
     <a href="./exports/metabolite_table.html">metabolite_table</a>
   </td>
   <td></td>
+</tr>
+<tr>
+  <td id="export_smiles_data">
+    <a href="./exports/export_smiles_data.html">export_smiles_data</a>
+  </td>
+  <td></td>
 </tr></tbody>
       </table>
     </div>
