--- a/vignettes/biocad_registry/registry.html
+++ b/vignettes/biocad_registry/registry.html
@@ -92,6 +92,18 @@ table caption {font-size:14px;font-weight:bolder;}
     <a href="./registry/make_genbank_dbxrefs.html">make_genbank_dbxrefs</a>
   </td>
   <td></td>
+</tr>
+<tr>
+  <td id="imports_pubchem">
+    <a href="./registry/imports_pubchem.html">imports_pubchem</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
+  <td id="imports_metacyc">
+    <a href="./registry/imports_metacyc.html">imports_metacyc</a>
+  </td>
+  <td></td>
 </tr></tbody>
       </table>
     </div>
