--- a/vignettes/biocad_registry/registry.html
+++ b/vignettes/biocad_registry/registry.html
@@ -100,8 +100,8 @@ table caption {font-size:14px;font-weight:bolder;}
   <td></td>
 </tr>
 <tr>
-  <td id="imports_metacyc">
-    <a href="./registry/imports_metacyc.html">imports_metacyc</a>
+  <td id="imports_metacyc_compounds">
+    <a href="./registry/imports_metacyc_compounds.html">imports_metacyc_compounds</a>
   </td>
   <td></td>
 </tr></tbody>
