--- a/vignettes/biocad_registry/registry.html
+++ b/vignettes/biocad_registry/registry.html
@@ -100,6 +100,12 @@ table caption {font-size:14px;font-weight:bolder;}
   <td></td>
 </tr>
 <tr>
+  <td id="imports_kegg_reactions">
+    <a href="./registry/imports_kegg_reactions.html">imports_kegg_reactions</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
   <td id="imports_metacyc_compounds">
     <a href="./registry/imports_metacyc_compounds.html">imports_metacyc_compounds</a>
   </td>
