fix of the missing name data

--- a/vignettes/biocad_registry/registry.html
+++ b/vignettes/biocad_registry/registry.html
@@ -106,6 +106,12 @@ table caption {font-size:14px;font-weight:bolder;}
   <td></td>
 </tr>
 <tr>
+  <td id="imports_rhea">
+    <a href="./registry/imports_rhea.html">imports_rhea</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
   <td id="imports_metacyc_reactions">
     <a href="./registry/imports_metacyc_reactions.html">imports_metacyc_reactions</a>
   </td>
