how to make imports of the uniprot sequence data

--- a/vignettes/biocad_registry/setup.html
+++ b/vignettes/biocad_registry/setup.html
@@ -122,6 +122,12 @@ table caption {font-size:14px;font-weight:bolder;}
     <a href="./setup/setup_ko.html">setup_ko</a>
   </td>
   <td></td>
+</tr>
+<tr>
+  <td id="setup_taxonomy">
+    <a href="./setup/setup_taxonomy.html">setup_taxonomy</a>
+  </td>
+  <td></td>
 </tr></tbody>
       </table>
     </div>
