--- a/vignettes/biocad_registry/registry.html
+++ b/vignettes/biocad_registry/registry.html
@@ -82,6 +82,12 @@ table caption {font-size:14px;font-weight:bolder;}
       <table class="table-three-line">
         <caption>.NET clr function exports</caption>
         <tbody><tr>
+  <td id="save_uniprot">
+    <a href="./registry/save_uniprot.html">save_uniprot</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
   <td id="save_genbank">
     <a href="./registry/save_genbank.html">save_genbank</a>
   </td>
