run package msbuild

--- a/vignettes/clr/registry_data/biocad_registry.html
+++ b/vignettes/clr/registry_data/biocad_registry.html
@@ -46,6 +46,7 @@ export class biocad_registry extends <a href="/vignettes/clr/registry_data/bioca
    protein_data: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a>;
    reaction: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a>;
    registry_resolver: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a>;
+   regulatory_network: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a>;
    struct_data: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a>;
    subcellular_location: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a>;
    synonym: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a>;
@@ -75,6 +76,7 @@ export class biocad_registry extends <a href="/vignettes/clr/registry_data/bioca
 <li>use by <i>property</i> member <code>protein_data</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a></li>
 <li>use by <i>property</i> member <code>reaction</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a></li>
 <li>use by <i>property</i> member <code>registry_resolver</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a></li>
+<li>use by <i>property</i> member <code>regulatory_network</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a></li>
 <li>use by <i>property</i> member <code>struct_data</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a></li>
 <li>use by <i>property</i> member <code>subcellular_location</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a></li>
 <li>use by <i>property</i> member <code>synonym</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/TableModel`1.html">TableModel`1</a></li>
