--- a/vignettes/biocad_registry/registry.html
+++ b/vignettes/biocad_registry/registry.html
@@ -128,6 +128,12 @@ table caption {font-size:14px;font-weight:bolder;}
     <a href="./registry/imports_metacyc_compounds.html">imports_metacyc_compounds</a>
   </td>
   <td></td>
+</tr>
+<tr>
+  <td id="save_TRN">
+    <a href="./registry/save_TRN.html">save_TRN</a>
+  </td>
+  <td></td>
 </tr></tbody>
       </table>
     </div>
